fix spacing in horizontal view

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -693,6 +693,7 @@
         display: flex;
         align-items: center;
         margin: 0;
+        margin-top: 0.5rem;
 
         > .ui.button {
             width: unset;
